--- a/porn/list.html
+++ b/porn/list.html
@@ -11,7 +11,11 @@
 <body>
 	<div class="panel" style="display: flex;">
 		<div class="item">
-			<img src="../src/img/nb.jpg" width="100%" height="auto">
+			<img src="../src/img/NikkiBella.jpg" width="100%" height="auto">
+			<div>nikki </div>
+		</div>
+		<div class="item">
+			<img src="../src/img/Nikki_Benz.jpg" width="100%" height="auto">
 			<div>nikki benz</div>
 		</div>
 	</div>
